@@ -1,3 +1,4 @@
+  - fixed status-header for cache_modified_check under cgi-sapi (messju)
   - added optional parameter $cache_attrs to register_function() and
     register_block(). $cache_attrs is an array containing attribute-
     names that should be cached on calls to functions that have
